HTML Code complete CSS remains

--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
 <!-- In this file you are going to write html code -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/main.css" type="text/css">
+    <script src="https://kit.fontawesome.com/3e67af693d.js" crossorigin="anonymous"></script>
+    <title>Ark Studio</title>
+</head>
+<body>
+    <div class="transparent_nav">
+    <header>
+        <nav class="nav_bar">
+            
+            <ul id="nav_list">
+                <img src="./file (10)/img/logo.png" alt="logo">
+                <li><a id="nav_item_1" href="#">Our Story</a></li>
+                <li><a id="nav_item_2" href="#">Products</a></li>
+                <li><a id="nav_item_3" href="#">Journal</a></li>
+                <li><a id="nav_item_4" href="#">Contacts</a></li>
+            </ul>
+        </nav>
+    </header>
+    </div>
+    <div class="cta">
+    <section id="cta">
+        <img src="./file (10)/img/billboard.jpg" alt="billboard">
+        <div class="job">
+        <p id="cta_text">Have a project in mind? We would love to hear from you!
+        <a id="cta_link" href="#">GET IN TOUCH WITH US</a></p>
+    </div>
+    </section>
+    </div>
+    <!--Not done-->
+    <div class="services wrapper">
+        <section id="services_wrapper">
+            <h3>We are ARK Studio, we make awesome stuff.</h3>
+            <ul>
+                <li>
+                    <img src="./file (10)/img/s1.png" alt="s1.png">
+                    <h3>Slamco laboris velitesse</h3>
+                    <p>
+                        sed do eiusmod tempor incididunt uto labour dolore magna aliqua enim minim veniam.
+                    </p>
+                </li>
+                <li><img src="./file (10)/img/s2.png" alt="s2.png">
+                    <h3>Slamco laboris velitesse</h3>
+                    <p>
+                        sed do eiusmod tempor incididunt uto labour dolore magna aliqua enim minim veniam.
+                    </p></li>
+                <li>
+                    <img src="./file (10)/img/s3.png" alt="s3.png">
+                    <h3>Slamco laboris velitesse</h3>
+                    <p>
+                        sed do eiusmod tempor incididunt uto labour dolore magna aliqua enim minim veniam.
+                    </p>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="recent_work">
+        <section>
+            <img src="./file (10)/img/w1.jpg" alt="work1">
+            <img src="./file (10)/img/w2.jpg" alt="work2">
+            <img src="./file (10)/img/w3.jpg" alt="work3">
+            <img src="./file (10)/img/w4.jpg" alt="work4">
+            <img src="./file (10)/img/w5.jpg" alt="work5">
+        </section>
+    </div>
+    <div class="testimonials_wrapper">
+        <section>
+            <h3>Testimonials</h3>
+            <ul>
+                <li>
+                    <img src="./file (10)/img/client1.jpg" alt="client1">
+                    <p><strong>John Doe</strong>/Manager</p>
+                    <p>Duis aute irure dolor in reprehenders it in voluptate velit esse cillum dolore in eu fugiate nula pariature sint occaecat cupidatat.</p>
+                </li>
+                <li>
+                    <p><img src="./file (10)/img/client2.jpg" alt="client1"></p>
+                    <p><strong>John Doe</strong>/Manager</p>
+                    <p>Duis aute irure dolor in reprehenders it in voluptate velit esse cillum dolore in eu fugiate nula pariature sint occaecat cupidatat.</p>
+                </li>
+                <li>
+                    <p><img src="./file (10)/img/client3.jpg" alt="client1"></p>
+                    <p><strong>John Doe</strong>/Manager</p>
+                    <p>Duis aute irure dolor in reprehenders it in voluptate velit esse cillum dolore in eu fugiate nula pariature sint occaecat cupidatat.</p>
+                </li>
+
+            </ul>
+        </section>
+    </div>
+    <footer>
+        <footer_widget>
+                <div>
+                    <h3>Location</h3>
+                    <address>3301 New Mexico Avenue Washington,DC 20016</address>
+                    <p>(202)537-0787</p>
+                    <p><img src="./file (10)/img/social.png" alt="social"></p>
+                </div>
+                <div>
+                    <h3>Company</h3>
+                    <ul id="comp_list">
+                        <li><a href="#" id="comp_item_1">Our Story</a></li>
+                        <li><a href="#" id="comp_item_2">Mission</a></li>
+                        <li><a href="#" id="comp_item_3">Journals</a></li>
+                        <li><a href="#" id="comp_item_4">Careers</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Supports</h3>
+                    <ul id="sup_list">
+                        <li><a href="#" id="sup_item_1">FAQ</a></li>
+                        <li><a href="#" id="sup_item_2">Contact Us</a></li>
+                        <li><a href="#" id="sup_item_3">Policies</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>ARK Studio</h3>
+                    <p>Excepture sint occaecat cupidatat non proident,Sunt in culpa qui officia est eserunt mollit anim laborum.</p>
+                </div>
+
+        </footer_widget>
+        <p class="rights">&copy; 2014 ARK Studio - All Rights Reserved</p>
+    </footer>
+    
+</body>
+</html>
