--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <img src="./file (10)/img/s3.png" alt="pc" id="image3"> 
                 <ul>
                     <li id="slv1" class="myli">Slamco laboris velitesse</li>
-                    <li id="slv2" class="myli">Slamco laboris velitesse</li>
-                    <li id="slv3" class="myli">Slamco laboris velitesse</li>
+                    <li id="slv2" class="myli1">Slamco laboris velitesse</li>
+                    <li id="slv3" class="myli2">Slamco laboris velitesse</li>
                 </ul>
                 <div class="mypara" id="para1">sed do eiusmod tempor incididunt uto labore dolore magna alique enim minim veniam.</div>
                 <div class="mypara" id="para2">sed do eiusmod tempor incididunt uto labore dolore magna alique enim minim veniam.</div>
