--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 
     <footer>
         <div class="footer_widget">
-            <div class="cta" style="margin-top: 40px;">
-                <section id="cta">
+            <div class="cta1" style="margin-top: 40px;">
+                <section id="cta1">
                     
-                    <div class="job" >
-                    <p id="cta_text">Have a project in mind? We would love to hear from you!
-                    <a id="cta_link" href="#">GET IN TOUCH WITH US</a></p>
+                    <div class="job1" >
+                    <p id="cta_text1">Have a project in mind? We would love to hear from you!
+                    <a id="cta_link1" href="#">GET IN TOUCH WITH US</a></p>
                 </div>
                 </section>
                 </div>
