--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
                 
 
             </div>
-        <p class="rights">&copy; 2014 ARK Studio - All Rights Reserved</p>
+            <div class="rights">
+        <p>&copy; 2014 ARK Studio - All Rights Reserved</p>
+    </div>
     </div>
     </footer>
     
