--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img src="./file (10)/img/w5.jpg" alt="work5">
         </section>
     </div>
-    <div class="testimonials_wrapper">
+    <div class="testimonials wrapper">
         <section>
             <h3>Testimonials</h3>
             <ul>
