--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <ul id="comp_list">
                         <li><a href="#" id="comp_item_1">Our Story</a></li>
                         <li><a href="#" id="comp_item_2">Mission</a></li>
-                        <li><a href="#" id="comp_item_3">Journals</a></li>
+                        <li><a href="#" id="comp_item_3">Journal</a></li>
                         <li><a href="#" id="comp_item_4">Careers</a></li>
                     </ul>
                 </div>
